# RaytracaH

./: .gitignore  .travis.yml  Bitmap.hs  Main.hs  README.md  RaytracaH.cabal  circle.yml  raytracaH.cabal  sceneWithCamera.json  stack.yaml
app/: Main.hs
conf/: config.json  sample_config.json
src/: Bitmap.hs  Camera.hs  Color.hs  Light.hs  Main.hs  Material.hs  Math.hs  Options.hs  Plane.hs  Primitive.hs  Ray.hs  RayTest.hs  RayTracer.hs  RaytracaH.hs  Scene.hs  Screen.hs  Sphere.hs  Util.hs  UtilTest.hs
src/RaytracaH/: Bitmap.hs  Camera.hs  Color.hs  Light.hs  Material.hs  Math.hs  Options.hs  Plane.hs  Primitive.hs  Ray.hs  RayTracer.hs  Scene.hs  Screen.hs  Sphere.hs
test/: MathTest.hs  RayTest.hs  Spec.hs  SphereTest.hs  UtilTest.hs
test/RaytracaH/Light/: Test.hs
test/RaytracaH/Math/: Test.hs
test/RaytracaH/Plane/: Test.hs
test/RaytracaH/Primitive/: Test.hs
test/RaytracaH/Ray/: Test.hs
test/RaytracaH/Sphere/: Test.hs
