name:                RaytracaH
version:             0.1.0.0
synopsis:            Functional Ray Tracer
description:         Please see README.md
homepage:            http://github.com/rafalnowak/RaytracaH#readme
license:             Apache
license-file:        LICENSE
author:              Rafał Nowak
maintainer:          rafal.nowak1@gmail.com
copyright:           2015 Rafał Nowak
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -funfolding-use-threshold=16 -O2 -optc-O3
  exposed-modules:     RaytracaH
                     , RaytracaH.RayTracer
                     , RaytracaH.Bitmap
                     , RaytracaH.Camera
                     , RaytracaH.Color
                     , RaytracaH.Light
                     , RaytracaH.Material
                     , RaytracaH.Math
                     , RaytracaH.Options
                     , RaytracaH.Primitive
                     , RaytracaH.Ray
                     , RaytracaH.Scene
                     , RaytracaH.Screen
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , vector
                     , mtl
                     , text
                     , QuickCheck
                     , Vec >= 1.0.5
  default-language:    Haskell2010

executable RaytracaH-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -funfolding-use-threshold=16 -O2 -optc-O3
  build-depends:       base
                     , aeson
                     , bytestring
                     , RaytracaH
                     , vector
                     , time
                     , Vec >= 1.0.5
  default-language:    Haskell2010

test-suite RaytracaH-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RaytracaH
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , vector
                     , Vec >= 1.0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rafalnowak/RaytracaH
