name:                raytracaH
version:             0.1.0.0
synopsis:            Simple Ray Tracer
description:         Please see README.md
homepage:            http://github.com/githubuser/raytracaH#readme
license:             BSD3
license-file:        LICENSE
author:              Rafał Nowak
maintainer:          rafal.nowak1@gmail.com
copyright:           2015 Rafał Nowak
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RayTracer
                     , Bitmap
                     , Camera
                     , Color
                     , Light
                     , Material
                     , Options
                     , Plane
                     , Primitive
                     , Ray
                     , Scene
                     , Screen
                     , Sphere
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , vector
                     , QuickCheck
                     , Vec >= 1.0.5
  default-language:    Haskell2010

executable raytracaH-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , raytracaH
                     , vector
                     , time
                     , Vec >= 1.0.5
  default-language:    Haskell2010

test-suite raytracaH-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raytracaH
                     , QuickCheck
                     , hspec
                     , vector
                     , Vec >= 1.0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/raytracaH
